--- a/AppProduct.Shared.Blazor/Components/ProductImageDialog.razor
+++ b/AppProduct.Shared.Blazor/Components/ProductImageDialog.razor
@@ -30,7 +30,7 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; } = null!;
+    [CascadingParameter] IMudDialogInstance MudDialog { get; set; } = null!;
     [Parameter] public string? ImageUrl { get; set; }
 
     private void Close() => MudDialog.Close();
