--- a/AppProduct.Shared.Blazor/Components/ProductListItem.razor
+++ b/AppProduct.Shared.Blazor/Components/ProductListItem.razor
@@ -2,7 +2,7 @@
 
 <MudCard Class="mud-elevation-1 mb-2">
     <MudCardContent>
-        <MudGrid AlignItems="Center">
+        <MudGrid>
             <MudItem xs="12" sm="2">
                 <MudImage Src="@(Product?.ImageUrl ?? "/images/placeholder-product.png")" 
                          Alt="@Product.GetDisplayName()"
