--- a/AppProduct.Shared.Blazor/Pages/CheckoutCancel.razor
+++ b/AppProduct.Shared.Blazor/Pages/CheckoutCancel.razor
@@ -23,7 +23,7 @@
                 </MudAlert>
             }
             
-            <MudStack Direction="Row" Spacing="3">
+            <MudStack Row="true" Spacing="3">
                 <MudButton Variant="Variant.Filled" 
                           Color="Color.Primary" 
                           StartIcon="@Icons.Material.Filled.ShoppingCart"
