--- a/AppProduct.Shared.Blazor/Pages/CheckoutSuccess.razor
+++ b/AppProduct.Shared.Blazor/Pages/CheckoutSuccess.razor
@@ -28,7 +28,7 @@
                     Thank you for your order! You will receive a confirmation email shortly.
                 </MudText>
                 
-                <MudStack Direction="Row" Spacing="3">
+                <MudStack Row="true" Spacing="3">
                     <MudButton Variant="Variant.Filled" 
                               Color="Color.Primary" 
                               StartIcon="@Icons.Material.Filled.Receipt"
