--- a/AppProduct.Shared.Blazor/Pages/ListOrder.razor
+++ b/AppProduct.Shared.Blazor/Pages/ListOrder.razor
@@ -38,7 +38,7 @@
             {
                 <MudCard Elevation="2">
                     <MudCardContent>
-                        <MudGrid AlignItems="Center">
+                        <MudGrid>
                             <MudItem xs="12" sm="3">
                                 <MudStack Spacing="1">
                                     <MudText Typo="Typo.subtitle1">Order #@order.OrderNumber</MudText>
