--- a/AppProduct.Shared.Blazor/Pages/OrderDetails.razor
+++ b/AppProduct.Shared.Blazor/Pages/OrderDetails.razor
@@ -95,7 +95,7 @@
                                 {
                                     <MudCard Elevation="1">
                                         <MudCardContent>
-                                            <MudGrid AlignItems="Center">
+                                            <MudGrid>
                                                 <MudItem xs="12" sm="2">
                                                     @if (!string.IsNullOrEmpty(item.Product?.ImageUrl))
                                                     {
