--- a/AppProduct.Shared.Blazor/Pages/ShoppingCart.razor
+++ b/AppProduct.Shared.Blazor/Pages/ShoppingCart.razor
@@ -42,7 +42,7 @@
                     {
                         <MudCard Class="mb-3" Elevation="1">
                             <MudCardContent>
-                                <MudGrid AlignItems="Center">
+                                <MudGrid>
                                     <MudItem xs="12" sm="2">
                                         @if (!string.IsNullOrEmpty(item.Product?.ImageUrl))
                                         {
