--- a/AppProduct.Shared.Blazor/Pages/UpdateFeature.razor
+++ b/AppProduct.Shared.Blazor/Pages/UpdateFeature.razor
@@ -57,29 +57,18 @@ else
     public long Id { get; set; }
 
     [CascadingParameter]
-    MudDialogInstance? MudDialog { get; set; }
+    IMudDialogInstance? MudDialog { get; set; }
 
     private Product[]? productArray;
-    private IEnumerable<long?>? productValues;
+    private IEnumerable<long?> productValues = Array.Empty<long?>();
     private Feature? record;
 
     private string GetAbsoluteUri(string uri)
     {
         if (!uri.StartsWith("/"))
-        {
             return uri;
-        }
-
-        var baseUri = HttpClient.BaseAddress;
-
-        if (baseUri == null)
-        {
-            throw new Exception("Unable to determine base address");
-        }
-
-        Uri absolute = new(baseUri, uri);
-
-        return absolute.ToString();
+        var baseUri = HttpClient.BaseAddress ?? throw new Exception("Unable to determine base address");
+        return new Uri(baseUri, uri).ToString();
     }
 
     protected override async Task OnInitializedAsync()
@@ -88,7 +77,8 @@ else
         {
             productArray = await AppService.ListProductAsync();
             record = await AppService.GetFeatureByIdAsync(Id);
-            productValues = record?.Product?.Select(x => x.Id).ToHashSet() ?? [];
+            if (record != null)
+                productValues = record.Product.Select(x => x.Id).ToHashSet();
         }
         catch (Exception ex)
         {
@@ -96,21 +86,18 @@ else
         }
     }
 
-    private void OnCancel()
-    {
-        MudDialog?.Cancel();
-    }
+    private void OnCancel() => MudDialog?.Cancel();
 
     private async void OnSubmit()
     {
         if (record == null)
-        {
             return;
-        }
-
         try
         {
-            record.Product = productValues?.Select(x => new Product { Id = x }).ToList();
+            record.Product = (productValues ?? Array.Empty<long?>())
+                .Where(x => x.HasValue)
+                .Select(x => new Product { Id = x })
+                .ToList();
             await AppService.UpdateFeatureAsync(Id, record);
             MudDialog?.Close();
         }
@@ -127,9 +114,7 @@ else
             Snackbar.Add("Only PNG or JPEG images can be uploaded.", Severity.Error);
             return null;
         }
-
         var image = await file.RequestImageFileAsync("image/png", maxWidth, maxHeight);
-
         try
         {
             return await AppService.UploadImageAsync(image);
@@ -138,7 +123,6 @@ else
         {
             Snackbar.Add(ex.Message, Severity.Error);
         }
-
         return null;
     }
 }
