--- a/AppProduct.Shared.Blazor/Pages/AddBrand.razor
+++ b/AppProduct.Shared.Blazor/Pages/AddBrand.razor
@@ -29,7 +29,7 @@
 
 @code {
     [CascadingParameter]
-    MudDialogInstance? MudDialog { get; set; }
+    IMudDialogInstance? MudDialog { get; set; }
 
     private Brand record = new();
 
