--- a/AppProduct.Shared.Blazor/Pages/AddFeature.razor
+++ b/AppProduct.Shared.Blazor/Pages/AddFeature.razor
@@ -35,39 +35,27 @@
 
 @code {
     [CascadingParameter]
-    MudDialogInstance? MudDialog { get; set; }
+    IMudDialogInstance? MudDialog { get; set; }
 
     private Product[]? productArray;
-    private IEnumerable<long?>? productValues;
+    private IEnumerable<long?> productValues = Array.Empty<long?>();
     private Feature record = new();
 
     private string GetAbsoluteUri(string uri)
     {
         if (!uri.StartsWith("/"))
-        {
             return uri;
-        }
-
-        var baseUri = HttpClient.BaseAddress;
-
-        if (baseUri == null)
-        {
-            throw new Exception("Unable to determine base address");
-        }
-
-        Uri absolute = new(baseUri, uri);
-
-        return absolute.ToString();
+        var baseUri = HttpClient.BaseAddress ?? throw new Exception("Unable to determine base address");
+        return new Uri(baseUri, uri).ToString();
     }
     
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-
         try
         {
             productArray = await AppService.ListProductAsync();
-            productValues = record?.Product?.Select(x => x.Id).ToHashSet() ?? [];
+            productValues = record.Product.Select(x => x.Id).ToHashSet();
         }
         catch(Exception ex)
         {
@@ -75,16 +63,13 @@
         }
     }
 
-    private void OnCancel()
-    {
-        MudDialog?.Cancel();
-    }
+    private void OnCancel() => MudDialog?.Cancel();
 
     private async void OnSubmit()
     {
         try
         {
-            record.Product = productValues?.Select(x => new Product { Id = x }).ToList();
+            record.Product = productValues.Where(x=>x.HasValue).Select(x => new Product { Id = x }).ToList();
             await AppService.InsertFeatureAsync(record);
             MudDialog?.Close();
         }
@@ -101,9 +86,7 @@
             Snackbar.Add("Only PNG or JPEG images can be uploaded.", Severity.Error);
             return null;
         }
-
         var image = await file.RequestImageFileAsync("image/png", maxWidth, maxHeight);
-
         try
         {
             return await AppService.UploadImageAsync(image);
@@ -112,7 +95,6 @@
         {
             Snackbar.Add(ex.Message, Severity.Error);
         }
-
         return null;
     }
 }
