--- a/AppProduct.Shared.Blazor/Pages/AddProductReview.razor
+++ b/AppProduct.Shared.Blazor/Pages/AddProductReview.razor
@@ -81,7 +81,7 @@
 
 @code {
     [CascadingParameter]
-    MudDialogInstance? MudDialog { get; set; }
+    IMudDialogInstance? MudDialog { get; set; }
 
     private ProductReview record = new();
     private decimal? ratingValue;
