--- a/AppProduct.Shared.Blazor/Pages/UpdateBrand.razor
+++ b/AppProduct.Shared.Blazor/Pages/UpdateBrand.razor
@@ -51,7 +51,7 @@ else
     public long Id { get; set; }
 
     [CascadingParameter]
-    MudDialogInstance? MudDialog { get; set; }
+    IMudDialogInstance? MudDialog { get; set; }
 
     private Brand? record;
 
