--- a/AppProduct.Shared.Blazor/Pages/UpdateProductReview.razor
+++ b/AppProduct.Shared.Blazor/Pages/UpdateProductReview.razor
@@ -55,7 +55,7 @@ else
     public long Id { get; set; }
 
     [CascadingParameter]
-    MudDialogInstance? MudDialog { get; set; }
+    IMudDialogInstance? MudDialog { get; set; }
 
     private ProductReview? record;
 
